--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -178,21 +178,21 @@ stream_1 : "☞︎︎︎ <b>𝐒ᴛᴀʀᴛᴇᴅ 𝐒ᴛʀᴇᴀᴍɪɴɢ |</b>
 stream_2 : "☞︎︎︎ <b>𝐒ᴛᴀʀᴛᴇᴅ 𝐒ᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>➪ 𝐒ᴛʀᴇᴀᴍ 𝐓ʏᴘᴇ :</b> 𝐋ɪᴠᴇ 𝐒ᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>➪ 𝐑ᴇǫᴜᴇsᴛᴇᴅ 𝐁ʏ :</b> {0}"
 
 
-CLOSE_BUTTON  : "🗑ᴄʟᴏsᴇ🗑"
-BACK_BUTTON : "ʙᴀᴄᴋ"
-NEXT_PAGE: ">"
-BACK_PAGE: "<"
+CLOSE_BUTTON  : "◉ 𝐂𝐥𝐨𝐬𝐞 ◉"
+BACK_BUTTON : "◉ 𝐁𝐚𝐜𝐤 ◉"
+NEXT_PAGE: "⇨"
+BACK_PAGE: "⇦"
 
 
-S_B_1 : "sᴜᴍᴍᴏɴ ᴍᴇ"
-S_B_2 : "sᴜᴘᴘᴏʀᴛ"
-S_B_3 : "sᴜᴍᴍᴏɴ ᴍᴇ "
-S_B_4 : "ᴄᴏᴍᴍᴀɴᴅs"
-S_B_5 : "ᴅᴇᴠ"
-S_B_6 : "ᴄʜᴀɴɴᴇʟ"
-S_B_7 : "ʀᴇᴘᴏ"
-S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_9 : "sᴜᴘᴘᴏʀᴛ"
+S_B_1 : "🥀 𝐒ᴜᴍᴍᴏɴ 𝐌ᴇ 🥀"
+S_B_2 : "👻 𝐒ᴜᴘᴘᴏʀᴛ 👻"
+S_B_3 : "🥀 𝐒ᴜᴍᴍᴏɴ 𝐌ᴇ 🥀 "
+S_B_4 : "🌷 𝐌ʏ 𝐂ᴏᴍᴍᴀɴᴅs 🌷"
+S_B_5 : "🍁𝐇ᴇᴀʀᴛʙᴇᴀᴛ🍁"
+S_B_6 : "🏴‍☠️ 𝐂ʜᴀɴɴᴇʟ 🏴‍☠️"
+S_B_7 : "⚡ 𝐑ᴇᴘᴏ ⚡"
+S_B_8 : "✨ 𝐘ᴏᴜᴛᴜʙᴇ ✨"
+S_B_9 : "👻 𝐒ᴜᴘᴘᴏʀᴛ 👻"
 
 H_B_1 : "ᴀᴅᴍɪɴ"
 H_B_2 : "ᴀᴜᴛʜ"
