--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -286,9 +286,9 @@ log_3 : "ᴅɪsᴀʙʟᴇᴅ ʟᴏɢɢɪɴɢ."
 broad_1 : "☞︎︎︎ 🌷𝐒ᴛᴀʀᴛᴇᴅ 𝐁ʀᴏᴀᴅᴄᴀsᴛɪɴɢ..."
 broad_2 : "<b>𝐄xᴀᴍᴘʟᴇ🌷 :</b>\n\n/𝐁roadcast [𝐌ᴇssᴀɢᴇ 𝐎ʀ 𝐑ᴇᴘʟʏ 𝐓ᴏ 𝐀 𝐌ᴇssᴀɢᴇ]"
 broad_3 : "☞︎︎︎ 🌷𝐁ʀᴏᴀᴅᴄᴀsᴛᴇᴅ 𝐌ᴇssᴀɢᴇ 𝐓ᴏ {0} 𝐂ʜᴀᴛs 𝐖ɪᴛʜ {1} 𝐏ɪɴs 𝐅ʀᴏᴍ 𝐓ʜᴇ 𝐁ᴏᴛ."
-broad_4 : "» ʙʀᴏᴀᴅᴄᴀsᴛᴇᴅ ᴍᴇssᴀɢᴇ ᴛᴏ {0} ᴜsᴇʀs."
-broad_5 : "» sᴛᴀʀᴛɪɴɢ ᴀssɪsᴛᴀɴᴛ ʙʀᴏᴀᴅᴄᴀsᴛ..."
-broad_6 : "➻ ᴀssɪsᴛᴀɴᴛ ʙʀᴏᴀᴅᴄᴀsᴛ :\n\n"
+broad_4 : "☞︎︎︎ 🌷𝐁ʀᴏᴀᴅᴄᴀsᴛᴇᴅ 𝐌ᴇssᴀɢᴇ 𝐓ᴏ {0} 𝐔sᴇʀs...🥀"
+broad_5 : "☞︎︎︎ 🌷 𝐒ᴛᴀʀᴛɪɴɢ 𝐀ssɪsᴛᴀɴᴛ 𝐁ʀᴏᴀᴅᴄᴀsᴛ...🥀"
+broad_6 : "➻ 🌷 𝐀ssɪsᴛᴀɴᴛ 𝐁ʀᴏᴀᴅᴄᴀsᴛ :\n\n"
 broad_7 : "↬ ᴀssɪsᴛᴀɴᴛ {0} ʙʀᴏᴀᴅᴄᴀsᴛᴇᴅ ɪɴ {1} ᴄʜᴀᴛs."
 broad_8 : "» ᴘʟᴇᴀsᴇ ᴘʀᴏᴠɪᴅᴇ sᴏᴍᴇ ᴛᴇxᴛ ᴛᴏ ʙʀᴏᴀᴅᴄᴀsᴛ."
 
