--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -308,8 +308,8 @@ server_13 : "<b>⇆ ʀᴜɴɴɪɴɢ ᴜᴩʟᴏᴀᴅ sᴩᴇᴇᴅᴛᴇsᴛ...
 server_14 : "<b>↻ sʜᴀʀɪɴɢ sᴩᴇᴇᴅᴛᴇsᴛ ʀᴇsᴜʟᴛs...</b>"
 server_15 : "✯ <b>sᴩᴇᴇᴅᴛᴇsᴛ ʀᴇsᴜʟᴛs</b> ✯\n\n<u><b>ᴄʟɪᴇɴᴛ :</b></u>\n<b>» ɪsᴩ :</b> {0}\n<b>» ᴄᴏᴜɴᴛʀʏ :</b> {1}\n\n<u><b>sᴇʀᴠᴇʀ :</b></u>\n<b>» ɴᴀᴍᴇ :</b> {2}\n<b>» ᴄᴏᴜɴᴛʀʏ :</b> {3}, {4}\n<b>» sᴩᴏɴsᴏʀ :</b> {5}\n<b>» ʟᴀᴛᴇɴᴄʏ :</b> {6}\n<b>» ᴩɪɴɢ :</b> {7}"
 
-gban_1 : "» ᴡʜʏ ᴅɪᴅ ʏᴏᴜ ᴡᴀɴɴᴀ ɢʙᴀɴ ʏᴏᴜʀsᴇʟғ ʙᴀʙʏ ?"
-gban_2 : "» ᴡʜʏ sʜᴏᴜʟᴅ ɪ ɢʙᴀɴ ᴍʏsᴇʟғ ?"
+gban_1 : "☞︎︎︎ 🫣𝐖ʜʏ 𝐃ɪᴅ 𝐘ᴏᴜ 𝐖ᴀɴɴᴀ 𝐆ʙᴀɴ 𝐘ᴏᴜʀsᴇʟғ 𝐁ᴀʙʏ ? ❤️‍🩹"
+gban_2 : "☞︎︎︎ 💔𝐀ᴀᴘ 𝐌ᴜᴊʜᴇ 𝐊ʏᴜ 𝐆ʙᴀɴ 𝐃ᴇ 𝐑ʜᴇ 𝐒ɪʀ 🥺"
 gban_3 : "» ʏᴏᴜ ᴄᴀɴ'ᴛ ɢʙᴀɴ ᴍʏ sᴜᴅᴏᴇʀs."
 gban_4 : "» {0} ɪs ᴀʟʀᴇᴀᴅʏ ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
 gban_5 : "» ɪɴɪᴛɪᴀʟɪᴢɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0}.\n\n<b>ᴛɪᴍᴇ ᴇxᴘᴇᴄᴛᴇᴅ :</b> {1}"
@@ -322,9 +322,9 @@ gban_11 : "» ғᴇᴛᴄʜɪɴɢ ɢʙᴀɴɴᴇᴅ ᴜsᴇʀs ʟɪsᴛ..."
 gban_12 : "🙂 <b>ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ᴜsᴇʀs :</b>\n\n"
 
 #Song
-SG_B_1 : "• ᴄʟɪᴄᴋ ʜᴇʀᴇ •"
-SG_B_2 : "🎧 ᴀᴜᴅɪᴏ 🎧"
-SG_B_3 : "🎥 ᴠɪᴅᴇᴏ 🎥"
+SG_B_1 : "◉ 𝐂ʟɪᴄᴋ 𝐇ᴇʀᴇ ◉"
+SG_B_2 : "🎧 𝐀ᴜᴅɪᴏ 🎧"
+SG_B_3 : "🎥 𝐕ɪᴅᴇᴏ 🎥"
 
 # Song
 song_1 : "ʏᴏᴜ ᴄᴀɴ ᴅᴏᴡɴʟᴏᴀᴅ ᴍᴜsɪᴄ ᴏʀ ᴠɪᴅᴇᴏ ꜰʀᴏᴍ ʏᴏᴜᴛᴜʙᴇ ᴏɴʟʏ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ. ᴘʟᴇᴀsᴇ sᴛᴀʀᴛ ᴍᴇ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ."
