--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -310,11 +310,11 @@ server_15 : "✯ <b>sᴩᴇᴇᴅᴛᴇsᴛ ʀᴇsᴜʟᴛs</b> ✯\n\n<u><b>ᴄ
 
 gban_1 : "☞︎︎︎ 🫣𝐖ʜʏ 𝐃ɪᴅ 𝐘ᴏᴜ 𝐖ᴀɴɴᴀ 𝐆ʙᴀɴ 𝐘ᴏᴜʀsᴇʟғ 𝐁ᴀʙʏ ? ❤️‍🩹"
 gban_2 : "☞︎︎︎ 💔𝐀ᴀᴘ 𝐌ᴜᴊʜᴇ 𝐊ʏᴜ 𝐆ʙᴀɴ 𝐃ᴇ 𝐑ʜᴇ 𝐒ɪʀ 🥺"
-gban_3 : "» ʏᴏᴜ ᴄᴀɴ'ᴛ ɢʙᴀɴ ᴍʏ sᴜᴅᴏᴇʀs."
-gban_4 : "» {0} ɪs ᴀʟʀᴇᴀᴅʏ ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-gban_5 : "» ɪɴɪᴛɪᴀʟɪᴢɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0}.\n\n<b>ᴛɪᴍᴇ ᴇxᴘᴇᴄᴛᴇᴅ :</b> {1}"
+gban_3 : "☞︎︎︎ 😤𝐘ᴏᴜ 𝐂ᴀɴ'ᴛ 𝐆ʙᴀɴ 𝐌ʏ 𝐒ᴜᴅᴏᴇʀs 😠 𝐎ᴋ 👻"
+gban_4 : "☞︎︎︎ ☠️ {0} 𝐈s 𝐀ʟʀᴇᴀᴅʏ 𝐆ʟᴏʙᴀʟʟʏ 𝐁ᴀɴɴᴇᴅ 𝐅ʀᴏᴍ 𝐓ʜᴇ 𝐁ᴏᴛ.👻"
+gban_5 : "☞︎︎︎ ☠️ 𝐈ɴɪᴛɪᴀʟɪᴢɪɴɢ 𝐆ʟᴏʙᴀʟ 𝐁ᴀɴ 𝐎ɴ {0}.\n\n<b>𝐓ɪᴍᴇ 𝐄xᴘᴇᴄᴛᴇᴅ :</b> {1}🥀"
 gban_6 : "<b><u>ɴᴇᴡ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0} :</u></b>\n\n<b>ᴏʀɪɢɪɴᴀᴛᴇᴅ ғʀᴏᴍ :</b> {1} [<code>{2}</code>]\n<b>ᴜsᴇʀ :</b> {3}\n<b>ᴜsᴇʀ ɪᴅ :</b> {4}\n\n<b>ʙᴀɴɴᴇᴅ ʙʏ :</b> {5}\n<b>ᴄʜᴀᴛs :</b> </code>{6}</code>"
-gban_7 : "» {0} ɪs ɴᴏᴛ ɢʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
+gban_7 : "☞︎︎︎ {0} 𝐈s 𝐍ᴏᴛ 𝐆ʙᴀɴɴᴇᴅ 𝐅ʀᴏᴍ 𝐓ʜᴇ 𝐁ᴏᴛ 🥀"
 gban_8 : "» ʟɪғᴛɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\n<b>ᴇxᴘᴇᴄᴛᴇᴅ ᴛɪᴍᴇ :</b> {1}"
 gban_9 : "» ʟɪғᴛᴇᴅ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\nᴜɴʙᴀɴɴᴇᴅ ɪɴ {1} ᴄʜᴀᴛs."
 gban_10 : "» ɴᴏ ᴏɴᴇ ɪs ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
