--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -315,11 +315,11 @@ gban_4 : "☞︎︎︎ ☠️ {0} 𝐈s 𝐀ʟʀᴇᴀᴅʏ 𝐆ʟᴏʙᴀʟʟʏ
 gban_5 : "☞︎︎︎ ☠️ 𝐈ɴɪᴛɪᴀʟɪᴢɪɴɢ 𝐆ʟᴏʙᴀʟ 𝐁ᴀɴ 𝐎ɴ {0}.\n\n<b>𝐓ɪᴍᴇ 𝐄xᴘᴇᴄᴛᴇᴅ :</b> {1}🥀"
 gban_6 : "<b><u>ɴᴇᴡ ɢʟᴏʙᴀʟ ʙᴀɴ ᴏɴ {0} :</u></b>\n\n<b>ᴏʀɪɢɪɴᴀᴛᴇᴅ ғʀᴏᴍ :</b> {1} [<code>{2}</code>]\n<b>ᴜsᴇʀ :</b> {3}\n<b>ᴜsᴇʀ ɪᴅ :</b> {4}\n\n<b>ʙᴀɴɴᴇᴅ ʙʏ :</b> {5}\n<b>ᴄʜᴀᴛs :</b> </code>{6}</code>"
 gban_7 : "☞︎︎︎ {0} 𝐈s 𝐍ᴏᴛ 𝐆ʙᴀɴɴᴇᴅ 𝐅ʀᴏᴍ 𝐓ʜᴇ 𝐁ᴏᴛ 🥀"
-gban_8 : "» ʟɪғᴛɪɴɢ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\n<b>ᴇxᴘᴇᴄᴛᴇᴅ ᴛɪᴍᴇ :</b> {1}"
-gban_9 : "» ʟɪғᴛᴇᴅ ɢʟᴏʙᴀʟ ʙᴀɴ ғʀᴏᴍ {0}.\n\nᴜɴʙᴀɴɴᴇᴅ ɪɴ {1} ᴄʜᴀᴛs."
-gban_10 : "» ɴᴏ ᴏɴᴇ ɪs ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ғʀᴏᴍ ᴛʜᴇ ʙᴏᴛ."
-gban_11 : "» ғᴇᴛᴄʜɪɴɢ ɢʙᴀɴɴᴇᴅ ᴜsᴇʀs ʟɪsᴛ..."
-gban_12 : "🙂 <b>ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ᴜsᴇʀs :</b>\n\n"
+gban_8 : "☞︎︎︎ 𝐋ɪғᴛɪɴɢ 𝐆ʟᴏʙᴀʟ 𝐁ᴀɴ 𝐅ʀᴏᴍ {0}.\n\n<b>𝐄xᴘᴇᴄᴛᴇᴅ 𝐓ɪᴍᴇ :</b> {1}"
+gban_9 : "☞︎︎︎ 𝐋ɪғᴛᴇᴅ 𝐆ʟᴏʙᴀʟ 𝐁ᴀɴ 𝐅ʀᴏᴍ {0}.\n\n𝐔ɴʙᴀɴɴᴇᴅ ɪɴ {1} 𝐂ʜᴀᴛs."
+gban_10 : "☞︎︎︎ 𝐍ᴏ 𝐎ɴᴇ 𝐈s 𝐆ʟᴏʙᴀʟʟʏ 𝐁ᴀɴɴᴇᴅ 𝐅ʀᴏᴍ 𝐓ʜᴇ 𝐁ᴏᴛ."
+gban_11 : "☞︎︎︎ 𝐅ᴇᴛᴄʜɪɴɢ 𝐆ʙᴀɴɴᴇᴅ 𝐔sᴇʀs 𝐋ɪsᴛ..."
+gban_12 : "🙂 <b>𝐆ʟᴏʙᴀʟʟʏ 𝐁ᴀɴɴᴇᴅ 𝐔sᴇʀs :</b>\n\n"
 
 #Song
 SG_B_1 : "◉ 𝐂ʟɪᴄᴋ 𝐇ᴇʀᴇ ◉"
