--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -184,15 +184,15 @@ NEXT_PAGE: "⇨"
 BACK_PAGE: "⇦"
 
 
-S_B_1 : "🥀 𝐒ᴜᴍᴍᴏɴ 𝐌ᴇ 🥀"
-S_B_2 : "👻 𝐒ᴜᴘᴘᴏʀᴛ 👻"
-S_B_3 : "🥀 𝐒ᴜᴍᴍᴏɴ 𝐌ᴇ 🥀 "
-S_B_4 : "🌷 𝐌ʏ 𝐂ᴏᴍᴍᴀɴᴅs 🌷"
-S_B_5 : "🍁𝐇ᴇᴀʀᴛʙᴇᴀᴛ🍁"
-S_B_6 : "🏴‍☠️ 𝐂ʜᴀɴɴᴇʟ 🏴‍☠️"
-S_B_7 : "⚡ 𝐑ᴇᴘᴏ ⚡"
-S_B_8 : "✨ 𝐘ᴏᴜᴛᴜʙᴇ ✨"
-S_B_9 : "👻 𝐒ᴜᴘᴘᴏʀᴛ 👻"
+S_B_1 : "✧˹𝐊ɪᴅɴᴀᴘ 𝐌ᴇ 𝐁ᴀʙᴇs˼✧"
+S_B_2 : "☞︎︎︎𝐒ᴜᴘᴘᴏʀᴛ☜︎︎︎"
+S_B_3 : "✧˹𝐊ɪᴅɴᴀᴘ 𝐌ᴇ 𝐁ᴀʙᴇs˼✧"
+S_B_4 : "𖣘 𝐌ʏ 𝐂ᴏᴍᴍᴀɴᴅs 𖣘"
+S_B_5 : "🇭 𝗮𝗿𝘀𝗵♡︎"
+S_B_6 : "🇭 𝗮𝗿𝘀𝗵♡︎"
+S_B_7 : "✧𝐑ᴇᴘᴏ✧"
+S_B_8 : "✧𝐘ᴏᴜᴛᴜʙᴇ✧"
+S_B_9 : "☞︎︎︎𝐒ᴜᴘᴘᴏʀᴛ☜︎︎︎"
 
 H_B_1 : "◈ 𝐀ᴅᴍɪɴ ◈"
 H_B_2 : "◈ 𝐀ᴜᴛʜ ◈"
