--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -178,8 +178,8 @@ stream_1 : "☞︎︎︎ <b>𝐒ᴛᴀʀᴛᴇᴅ 𝐒ᴛʀᴇᴀᴍɪɴɢ |</b>
 stream_2 : "☞︎︎︎ <b>𝐒ᴛᴀʀᴛᴇᴅ 𝐒ᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>➪ 𝐒ᴛʀᴇᴀᴍ 𝐓ʏᴘᴇ :</b> 𝐋ɪᴠᴇ 𝐒ᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>➪ 𝐑ᴇǫᴜᴇsᴛᴇᴅ 𝐁ʏ :</b> {0}"
 
 
-CLOSE_BUTTON  : "◉ 𝐂𝐥𝐨𝐬𝐞 ◉"
-BACK_BUTTON : "◉ 𝐁𝐚𝐜𝐤 ◉"
+CLOSE_BUTTON  : " ◈ 𝐂𝐥𝐨𝐬𝐞   ◈"
+BACK_BUTTON : " ◈ 𝐁𝐚𝐜𝐤  ◈"
 NEXT_PAGE: "⇨"
 BACK_PAGE: "⇦"
 
@@ -189,7 +189,7 @@ S_B_2 : "☞︎︎︎𝐒ᴜᴘᴘᴏʀᴛ☜︎︎︎"
 S_B_3 : "✧˹𝐊ɪᴅɴᴀᴘ 𝐌ᴇ 𝐁ᴀʙᴇs˼✧"
 S_B_4 : "𖣘 𝐌ʏ 𝐂ᴏᴍᴍᴀɴᴅs 𖣘"
 S_B_5 : "🇭 𝗮𝗿𝘀𝗵♡︎"
-S_B_6 : "🇭 𝗮𝗿𝘀𝗵♡︎"
+S_B_6 : "✧𝐂ʜᴀɴɴᴇʟ✧"
 S_B_7 : "✧𝐑ᴇᴘᴏ✧"
 S_B_8 : "✧𝐘ᴏᴜᴛᴜʙᴇ✧"
 S_B_9 : "☞︎︎︎𝐒ᴜᴘᴘᴏʀᴛ☜︎︎︎"
