--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -184,7 +184,7 @@ NEXT_PAGE: "⇨"
 BACK_PAGE: "⇦"
 
 
-S_B_1 : "✧˹𝐊ɪᴅɴᴀᴘ 𝐌ᴇ 𝐁ᴀʙᴇs˼✧"
+S_B_1 : "✧˹𝐀ᴅᴅ 𝐌ᴇ˼ ✧"
 S_B_2 : "☞︎︎︎𝐒ᴜᴘᴘᴏʀᴛ☜︎︎︎"
 S_B_3 : "✧˹𝐊ɪᴅɴᴀᴘ 𝐌ᴇ 𝐁ᴀʙᴇs˼✧"
 S_B_4 : "𖣘 𝐌ʏ 𝐂ᴏᴍᴍᴀɴᴅs 𖣘"
